# merge-translate

./: .gitignore  .gitmodules  README.md  evaluate_it-sv.py  pyproject.toml  readme.md  tr-pl-tatoeba.tsv  translation-test.ipynb
config/: mistral-ties.yml
merge_translate/: translator.py
scripts/: evaluate_it-sv.py  evaluate_it-tr.py  evaluation.py  interact.py  interact_en-it.py  interact_en-tr.py  interact_it_sv.py  merge.sh  merging.ipynb  translation-test.ipynb
src/merge_translate/: translator.py
