[tool.poetry]
name = "merge-translate"
version = "0.1.0"
description = ""
authors = ["Franco Ruggeri <francoruggeri95@gmail.com>", "Adam Orucu <adam.orucu@ericsson.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = """
    missing-module-docstring,
    missing-function-docstring,
    missing-class-docstring,
"""

[tool.pylint.format]
max-line-length=120

[tool.black]
line-length=120