[tool.poetry]
name = "merge-translate"
version = "0.1.0"
description = ""
authors = ["Franco Ruggeri <francoruggeri95@gmail.com>", "Adam Orucu <adam.orucu@ericsson.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8-pyproject = "^1.2.3"
transformers = "^4.41.2"
datasets = "^2.19.1"
nltk = "^3.8.1"
sacremoses = "^0.1.1"
evaluate = "^0.4.2"
tqdm = "^4.66.4"
sacrebleu = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = """
    missing-module-docstring,
    missing-function-docstring,
    missing-class-docstring,
"""

[tool.pylint.format]
max-line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,W503"

[tool.black]
line-length = 120